# Voltlib

./: .gitignore  .gitmodules  CMakeLists.txt
VoltLib/: App.cpp  App.hpp  CMakeLists.txt
VoltLib/Backend/: ResourceRegistry.cpp  ResourceRegistry.hpp
VoltLib/Math/: Rect.hpp
VoltLib/Rendering/: Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Window.hpp
VoltLib/imgui/: ImGuiManager.hpp
engine/: CMakeLists.txt
engine/Voltlib/: App.cpp  App.hpp  Application.cpp  Application.hpp
engine/Voltlib/Backend/: ImageLoader.cpp  ImageLoader.hpp  ResourceRegistry.cpp  ResourceRegistry.hpp
engine/Voltlib/Debug/: Debug.cpp  Debug.hpp
engine/Voltlib/Input/: InputSystem.cpp  InputSystem.hpp  Key.hpp
engine/Voltlib/Logic/: Entity.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
engine/Voltlib/Logic/Components/: Component.hpp  Rigidbody.hpp  Transform.hpp
engine/Voltlib/Math/: Point.hpp  Vector.hpp
engine/Voltlib/Physics/: Collider.cpp  Collider.hpp  CollisionManager.cpp  CollisionManager.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
engine/Voltlib/Rendering/: Camera.hpp  Color.hpp  RenderFrontEnd.cpp  RenderFrontend.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
engine/Voltlib/imgui/: ImGuiManager.cpp  ImGuiManager.hpp
game_src/: CMakeLists.txt  main.cpp
